--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ verify_ssl = true
 flask = "*"
 numpy = "*"
 scipy = "*"
+werkzeug = "*"
+pydub = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
